@@ -1,12 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.95 2005/03/22 02:41:13 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.96 2005/03/22 04:14:40 agaffney Exp $
 
 *GLI-0.01 (9 Feb 2004)
 
   21 Mar 2005; Preston Cody <codeman@gentoo.org>
   took chroot out of grub_install command. Added
-  'logfile=self._compile_logfile' to a number of spawn() calls.
+  'logfile=self._compile_logfile' to a number of spawn() calls. Added new
+  hash_password() function to GLIUtility.
 
   21 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
   Changed chroot wrapper code in spawn() to write the wrapper the python way
